# ce-workflow

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  README.md  pyproject.toml
backend/: .env.example  CONTEXT.md  README.md  anomaly_taxonomy.py  catalog_agent.py  config.py  daq_agent.py  diagnostic_agent.py  document_store.py  embedding.py  femb_test_schema.py  main.py  mcp_daq.py  mcp_django_db.py  monitor_agent.py  monitor_chat.py  monitor_db.py  monitor_session.py  monitor_sync.py  pipeline.py  pyproject.toml  qc_analysis_agent.py  rag_pipeline.py  run_store.py  sse.py  ssh_helper.py
backend/scripts/: mock_daq.py
backend/seeds/: dune_ce_intro.txt
backend/tests/: test_api.py  test_document_store.py  test_embedding.py  test_rag_pipeline.py
docker/: docker-compose.yml
docs/agents/: domain.md
docs/progress/: progress-2026-W18.md  progress-2026-W19.md  progress-2026-W20.md
frontend/: CONTEXT.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ChatView.vue  GraphFlow.vue  PipelineGraph.vue  QcStartButton.vue  ReportsView.vue  Sparkline.vue  TelemetryRail.vue  UploadPanel.vue
frontend/src/components/chat/: MessageBubble.vue
frontend/src/components/monitor/: MonitorChat.vue  (+3 more)
frontend/src/composables/: graphConfig.js  useChat.js  useChat.test.js  useMonitor.js  useStream.js
frontend/src/pages/: ChatPage.vue  DocumentsPage.vue  MonitorPage.vue  ReportDetailPage.vue  ReportsPage.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
scripts/: manage.sh  status.sh
