[project]
name = "ce-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "h5py>=3.12.0",
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "mcp>=1.3.0",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.32.0",
]
